WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58693
REGRESSION: <progress> doesn't animate if it doesn't have value
https://bugs.webkit.org/show_bug.cgi?id=58693
Summary
REGRESSION: <progress> doesn't animate if it doesn't have value
Hajime Morrita
Reported
2011-04-15 14:06:18 PDT
The indefinite progress bar, which is rendered by <progress> element without value property should animate. Looks introduced
http://trac.webkit.org/changeset/83065
.
Attachments
Patch
(3.24 KB, patch)
2011-04-15 15:07 PDT
,
Hajime Morrita
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2011-04-15 15:07:16 PDT
Created
attachment 89862
[details]
Patch
Yael
Comment 2
2011-04-16 04:31:31 PDT
Thanks for fixing it.
Adam Barth
Comment 3
2011-04-17 09:58:51 PDT
Comment on
attachment 89862
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=89862&action=review
Nice patch. Yay for named constants.
> Source/WebCore/ChangeLog:12 > + No new tests. Testing animated bar is not possible with DRT.
Frown. This likely means we will continue to have regressions.
Kent Tamura
Comment 4
2011-04-17 19:09:22 PDT
Comment on
attachment 89862
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=89862&action=review
> Source/WebCore/html/HTMLProgressElement.cpp:43 > +const double HTMLProgressElement::IndeterminatePosition = -1; > +const double HTMLProgressElement::InvalidPosition = -2;
In RenderProgress::isDeterminate(), we should use these named constants, or add a comment that "0 <= " means neither indeterminate nor invalid.
Hajime Morrita
Comment 5
2011-04-18 10:07:43 PDT
Adam, Kent-san, thank you for reviewing! I'll land this with addressing Kent-san's point.
Hajime Morrita
Comment 6
2011-04-18 10:14:16 PDT
Committed
r84156
: <
http://trac.webkit.org/changeset/84156
>
WebKit Review Bot
Comment 7
2011-04-18 12:21:13 PDT
http://trac.webkit.org/changeset/84156
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug